	* IMPORTANT: options are no longer automatically stored - use the
	  ~/.vimperatorrc file instead for persistent options
	* IMPORTANT: Major hints rewrite
	  read up the new help for the f, F and ; commands for details
	  removed the following hint options: 'hintchars' 'maxhints'
	  added the following hint options: 'hinttimeout'
	* IMPORTANT: changed 'I' key to Ctrl-Q to also work in textboxes
    * new setCustomMode for plugin writers
    * :au[tocmd] executes commands on events (only 'PageLoad' actually) on websites
	* @@ to repeat last macro
	* new macro commands q[a-z0-9] and @[a-z0-9] to replay them (thanks Marco!)
	* scroll commands like j/k/gg/etc. have a much better heuristic to find a scrollable frame
    * imap, inoremap, iunmap and imapclear added
	* new g0 and g$ mappings to go to the first/last tab
	* new gf and gF mappings and ;v and ;V hints mode to view the source code
	* new 'history' option for specifying the number of Ex commands and
	  search patterns to store in the commandline history
	* new ctrl-x and ctrl-a mappings to increment the last number in the URL
	* new ~ mapping to open the home directory
	* :open tries to open a relative filename now, if you do a :open foo.html
	  or :open ../hello.txt;
	* new :cd and :pwd commands
	* new :dialog command to open various firefox dialogs
	* new a and A mappings to deal with bookmarks
	* added ]] and [[ to navigate to the next/previous document based on
	  the regexp specified in 'nextpattern' and 'previouspattern' (thanks kidd)
	* abbreviations for text fields (:abbr etc.) (thanks calmar)
	* you can edit textfields with Ctrl-i now using an external editor (thanks to Joseph Xu)
	* :open, :bmarks, etc. filter on space separated tokens now, so you can
	  search with :open linux windows &lt;tab&gt; all your bookmarks/history
	  which contain linux AND windows in the url or title
	* tags and keyword support for :bmark
	* added full zoom, and changed keybindings slightly for text zoom