@@ -10,7 +10,7 @@ Inactive/former developers:
   * Viktor Kojouharov (Виктор Кожухаров)
  
 Patches (in no special order):
-  * Daniel Bainton (:viewsource)
+  * Daniel Bainton (:viewsource, :command)
   * Muthu Kannan (ctrl-v support)
   * Lars Kindler (:buffer(s) functionality)
   * Lee Hinman (:open ./.. support)
